Update Interval 1 Second, New Category: Used Memory

--- a/src/de/elmar_baumann/nbmemusage/Bundle_en.properties
+++ b/src/de/elmar_baumann/nbmemusage/Bundle_en.properties
@@ -1,12 +1,7 @@
 
-MemoryUsageDetailsPanel.labelTotalMemoryPrompt.text=Used Memory:
-MemoryUsageDetailsPanel.labelMaxMemoryPrompt.text=Available Memory:
-MemoryUsageDetailsPanel.labelFreeMemoryPrompt.text=Free Memory:
-SizeInfo.Exbibyte=Exbibytes (2^60 Bytes ~ Exabytes)
-SizeInfo.Gibibyte=Gibibytes (2^30 Bytes ~ Gigabytes)
-SizeInfo.Kibibyte=Kibibytes (2^10 Bytes ~ Kilobytes)
-SizeInfo.Mebibyte=Mebibytes (2^20 Bytes ~ Megabytes)
-SizeInfo.Pebibyte=Pebibytes (2^50 Bytes ~ Petabytes)
-SizeInfo.Tebibyte=Tebibytes (2^40 Bytes ~ Terabytes)
+MemoryUsageDetailsPanel.labelTotalMemoryPrompt.text=VM Allocated Memory:
+MemoryUsageDetailsPanel.labelMaxMemoryPrompt.text=Maximum Memory:
+MemoryUsageDetailsPanel.labelFreeMemoryPrompt.text=Free Memory within the VM:
 MemoryUsageStatusLinePanel.buttonShowDetails.toolTipText=Show Details
-MemoryUsageStatusLinePanel.labelTotalMemory.toolTipText=Used Memory
+MemoryUsageStatusLinePanel.labelUsedMemory.toolTipText=Used Memory
+MemoryUsageDetailsPanel.labelUsedMemoryPrompt.text=Used Memory:
