Added popup menu with Garbage Collector invoke menu item

--- a/src/de/elmar_baumann/nbmemusage/Bundle_en.properties
+++ b/src/de/elmar_baumann/nbmemusage/Bundle_en.properties
@@ -5,3 +5,4 @@ MemoryUsageDetailsPanel.labelFreeMemoryPrompt.text=Free Memory within the VM:
 MemoryUsageStatusLinePanel.buttonShowDetails.toolTipText=Show Details
 MemoryUsageStatusLinePanel.labelUsedMemory.toolTipText=Used Memory
 MemoryUsageDetailsPanel.labelUsedMemoryPrompt.text=Used Memory:
+GarbageCollectAction.Name=Invoke Garbage Collector
